--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,11 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "pydantic>=2.12.4",
+    "ruff>=0.14.6",
+]
+
+[dependency-groups]
+dev = [
+    "pytest-cov>=7.0.0",
+    "ruff>=0.14.6",
 ]
