--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "dev-journal"
 version = "0.1.0"
-description = "Add your description here"
+description = "Journal for development"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "pydantic>=2.12.4",
     "ruff>=0.14.6",
+    "typer>=0.20.0",
 ]
 
 [dependency-groups]
